all: fix viewing on mobile

--- a/style.css
+++ b/style.css
@@ -1,44 +1,38 @@
 /* https://paletton.com/#uid=13t0u0kllllaFw0g0qFqFg0w0aF */
 body {
-    display: flex;
+    overflow: auto;
+    display: inline-block;
     padding: 0;
     margin: 0;
     font-family: -apple-system,system-ui,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Fira Sans,Ubuntu,Oxygen,Oxygen Sans,Cantarell,Droid Sans,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Lucida Grande,Helvetica,Arial,sans-serif;
 }
 
+#wrapper {
+    display: flex;
+    flex-direction: row;
+}
+
 #leftbar {
-    width: 20%;
-    height: 100%;
-    min-width: 320px;
+    flex: 1;
+    min-width: 480px;
+
+    background-color: #477187;
+    padding: 0 2ch 0 2ch;
+    color: white;
 }
 
 #main {
-    width: 80%;
+    flex: 4;
 }
 
 @media screen and (orientation: portrait) and (max-width: 1280px) {
-    body {
+    #wrapper {
         flex-direction: column-reverse;
-        overflow-x: hidden;
     }
-
     #leftbar {
-        width: 100%;
-        box-sizing: border-box;
-    }
 
-    #main {
-        width: 100%;
-        flex: 1;
-        box-sizing: border-box;
+        min-width: 320px;
     }
-}
-
-#leftbar {
-    background-color: #477187;
-    margin: 0;
-    padding: 0 2ch 0 2ch;
-    color: white;
 }
 
 #main {
